# nextjs-fastapi-postgres-starter

./: LICENSE  README.md  docker-compose.yml
backend/: db_engine.py  main.py  models.py  pyproject.toml  seed.py  utils.py
frontend/app/: chat.tsx  chatcomponent.tsx  page.tsx
